--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <version>0.1.0-SNAPSHOT</version>
     <name>Ariane Community Scenarios Parent</name>
     <packaging>pom</packaging>
+	
+    <modules>
+	<module>commons</module>
+	<module>tradeworkflow</module>
+    </modules>
 
     <repositories>
         <repository>
