--- a/commons/momcli-patterns-rabbitmq/pom.xml
+++ b/commons/momcli-patterns-rabbitmq/pom.xml
@@ -3,10 +3,10 @@
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
-         <groupId>net.echinopsii.ariane.community.scenarios</groupId>
-	 <artifactId>net.echinopsii.ariane.community.scenarios.commons</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
-         <relativePath>..</relativePath>
+        <groupId>net.echinopsii.ariane.community.scenarios</groupId>
+	    <artifactId>net.echinopsii.ariane.community.scenarios.commons</artifactId>
+        <version>0.1.0-SNAPSHOT</version>
+        <relativePath>..</relativePath>
     </parent>
 
     <!-- General information -->
@@ -14,5 +14,30 @@
     <artifactId>net.echinopsii.ariane.community.scenarios.commons.momcli-patterns-rabbitmq</artifactId>
     <name>Ariane Community Scenarios Commons : MoM client patterns - RabbitMQ impl</name>
     <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.10</artifactId>
+            <version>2.3.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.echinopsii.ariane.community.scenarios.commons</groupId>
+            <artifactId>net.echinopsii.ariane.community.scenarios.commons.momcli-patterns-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>3.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 	
 </project>
