[TAC-150] add script and conf and some improvments

--- a/tradeworkflow/pom.xml
+++ b/tradeworkflow/pom.xml
@@ -20,6 +20,6 @@
 	<module>feederapp</module>
 	<module>moapp</module>
     <module>riskapp</module>
-	<module>tradingapp</module>
+	<module>frontapp</module>
     </modules>
 </project>
