--- a/distrib/conf/feeder.properties
+++ b/distrib/conf/feeder.properties
@@ -1,4 +1,8 @@
 mom_cli.impl=net.echinopsii.ariane.community.scenarios.commons.momcli.rabbitmq.Client
+mom_cli.rabbitmq.product=Ariane tradeworkflow simulation - Feeder
+mom_cli.rabbitmq.information=Feeder - Primary Instance
+mom_cli.rabbitmq.copyright=AGPLv3
+mom_cli.rabbitmq.version=0.1.0-SNAPSHOT
 mom_host.fqdn=localhost
 mom_host.port=5672
 feeder.base_topic=PRICE
