--- a/tradeworkflow/pom.xml
+++ b/tradeworkflow/pom.xml
@@ -4,8 +4,8 @@
     
     <parent>
          <groupId>net.echinopsii.ariane.community</groupId>
-	 <artifactId>net.echinopsii.ariane.community.scenarios</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
+	     <artifactId>net.echinopsii.ariane.community.scenarios</artifactId>
+         <version>0.1.0</version>
          <relativePath>..</relativePath>
     </parent>
 
