--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -5,7 +5,7 @@
     <parent>
          <groupId>net.echinopsii.ariane.community</groupId>
 	 <artifactId>net.echinopsii.ariane.community.scenarios</artifactId>
-         <version>0.1.0</version>
+         <version>0.2.0-SNAPSHOT</version>
          <relativePath>..</relativePath>
     </parent>
 
