[TAC-178] add some specific ariane properties to rabbitmq connection properties

--- a/distrib/conf/backoffice.properties
+++ b/distrib/conf/backoffice.properties
@@ -1,8 +1,12 @@
 mom_cli.impl=net.echinopsii.ariane.community.scenarios.commons.momcli.rabbitmq.Client
 mom_cli.rabbitmq.product=Ariane tradeworkflow simulation - Back Office
-mom_cli.rabbitmq.information=BackOfficeService-03
+mom_cli.rabbitmq.information=BackOfficeService-01
 mom_cli.rabbitmq.copyright=AGPLv3
-mom_cli.rabbitmq.version=0.1.0-SNAPSHOT
+mom_cli.rabbitmq.version=0.2.0-SNAPSHOT
 mom_host.fqdn=localhost
 mom_host.port=5672
+ariane.pgurl=jmx://backofficesrv-01.lab01.dev.dekatonshivr.echinopsii.net:9010
+ariane.osi=backofficesrv-01.lab01.dev.dekatonshivr.echinopsii.net
+ariane.otm=BackOffice OPS Team
+ariane.dtm=BackOffice DEV Team
 back_office.queue=BOQ
