--- a/distrib/conf/frontoffice.properties
+++ b/distrib/conf/frontoffice.properties
@@ -1,10 +1,14 @@
 mom_cli.impl=net.echinopsii.ariane.community.scenarios.commons.momcli.rabbitmq.Client
 mom_cli.rabbitmq.product=Ariane tradeworkflow simulation - Front Office
-mom_cli.rabbitmq.information=FrontOfficeService-03
+mom_cli.rabbitmq.information=FrontOfficeService-01
 mom_cli.rabbitmq.copyright=AGPLv3
-mom_cli.rabbitmq.version=0.1.0-SNAPSHOT
+mom_cli.rabbitmq.version=0.2.0-SNAPSHOT
 mom_host.fqdn=localhost
 mom_host.port=5672
+ariane.pgurl=jmx://frontoffice-01.lab01.dev.dekatonshivr.echinopsii.net:9010
+ariane.osi=frontoffice-01.lab01.dev.dekatonshivr.echinopsii.net
+ariane.otm=FrontOffice OPS Team
+ariane.dtm=FrontOffice DEV Team
 front_office.feeder_base_topic=PRICE
 front_office.mo_queue=MOQ
 front_office.stocks_block_size=30
