--- a/distrib/conf/feeder.properties
+++ b/distrib/conf/feeder.properties
@@ -5,5 +5,9 @@ mom_cli.rabbitmq.copyright=AGPLv3
 mom_cli.rabbitmq.version=0.1.0-SNAPSHOT
 mom_host.fqdn=localhost
 mom_host.port=5672
+ariane.pgurl=jmx://feeder-01.lab01.dev.dekatonshivr.echinopsii.net:9010
+ariane.osi=feeder-01.lab01.dev.dekatonshivr.echinopsii.net
+ariane.otm=Feeder OPS Team
+ariane.dtm=Feeder DEV Team
 feeder.base_topic=PRICE
 feeder.stocks_list=stock_a,stock_b,stock_c,stock_d,stock_e,stock_f,stock_g,stock_h,stock_i,stock_j,stock_k
