--- a/distrib/conf/risk.properties
+++ b/distrib/conf/risk.properties
@@ -1,8 +1,12 @@
 mom_cli.impl=net.echinopsii.ariane.community.scenarios.commons.momcli.rabbitmq.Client
 mom_cli.rabbitmq.product=Ariane tradeworkflow simulation - Risk
-mom_cli.rabbitmq.information=RiskService-03
+mom_cli.rabbitmq.information=ariane_pgurl=jmx://riskservice-01.lab01.dev.dekatonshivr.echinopsii.net:9010
 mom_cli.rabbitmq.copyright=AGPLv3
 mom_cli.rabbitmq.version=0.1.0-SNAPSHOT
 mom_host.fqdn=localhost
 mom_host.port=5672
+ariane.pgurl=jmx://risksrv-01.lab01.dev.dekatonshivr.echinopsii.net:9010
+ariane.osi=risksrv-01.lab01.dev.dekatonshivr.echinopsii.net
+ariane.otm=Risk Service OPS Team
+ariane.dtm=Risk Service DEV Team
 risk.queue=RIQ
