--- a/commons/momcli-patterns-api/pom.xml
+++ b/commons/momcli-patterns-api/pom.xml
@@ -4,8 +4,8 @@
     
     <parent>
          <groupId>net.echinopsii.ariane.community.scenarios</groupId>
-	 <artifactId>net.echinopsii.ariane.community.scenarios.commons</artifactId>
-         <version>0.2.0-SNAPSHOT</version>
+	     <artifactId>net.echinopsii.ariane.community.scenarios.commons</artifactId>
+         <version>0.2.0</version>
          <relativePath>..</relativePath>
     </parent>
 
