--- a/commons/momcli-patterns-rabbitmq/pom.xml
+++ b/commons/momcli-patterns-rabbitmq/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.echinopsii.ariane.community.scenarios</groupId>
 	    <artifactId>net.echinopsii.ariane.community.scenarios.commons</artifactId>
-        <version>0.2.0-SNAPSHOT</version>
+        <version>0.2.0</version>
         <relativePath>..</relativePath>
     </parent>
 
