--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -16,8 +16,9 @@
     <packaging>pom</packaging>
 	
     <modules>
-	<module>momcli-patterns-api</module>
-	<module>momcli-patterns-rabbitmq</module>
-	<module>momcli-patterns-jms</module>
+        <module>cassandra-connector</module>
+	    <module>momcli-patterns-api</module>
+	    <module>momcli-patterns-rabbitmq</module>
+	    <module>momcli-patterns-jms</module>
     </modules>
 </project>
