[ACC-76] up scenario distrib

--- a/distrib/conf/feeder.properties
+++ b/distrib/conf/feeder.properties
@@ -1,13 +1,15 @@
-mom_cli.impl=net.echinopsii.ariane.community.scenarios.commons.momcli.rabbitmq.Client
-mom_cli.rabbitmq.product=Ariane tradeworkflow simulation - Feeder
-mom_cli.rabbitmq.information=Feeder - Primary Instance
-mom_cli.rabbitmq.copyright=AGPLv3
-mom_cli.rabbitmq.version=0.1.0-SNAPSHOT
-mom_host.fqdn=localhost
-mom_host.port=5672
-ariane.pgurl=jmx://feeder-01.lab01.dev.dekatonshivr.echinopsii.net:9010
-ariane.osi=feeder-01.lab01.dev.dekatonshivr.echinopsii.net
-ariane.otm=Feeder OPS Team
-ariane.dtm=Feeder DEV Team
-feeder.base_topic=PRICE
-feeder.stocks_list=stock_a,stock_b,stock_c,stock_d,stock_e,stock_f,stock_g,stock_h,stock_i,stock_j,stock_k
+mom_cli.impl=##mom_cli.impl
+mom_cli.rabbitmq.product=##mom_cli.rabbitmq.product
+mom_cli.rabbitmq.information=##mom_cli.rabbitmq.information
+mom_cli.rabbitmq.copyright=##mom_cli.rabbitmq.copyright
+mom_cli.rabbitmq.version=##mom_cli.rabbitmq.version
+mom_host.fqdn=##mom_host.fqdn
+mom_host.port=##mom_host.port
+ariane.pgurl=##ariane.pgurl
+ariane.osi=##ariane.osi
+ariane.otm=##ariane.otm
+ariane.app=##ariane.app
+ariane.cmp=##ariane.cmp
+ariane.type=##ariane.type
+feeder.base_topic=##feeder.base_topic
+feeder.stocks_list=##feeder.stocks_list
