--- a/distrib/conf/frontoffice.properties
+++ b/distrib/conf/frontoffice.properties
@@ -1,15 +1,17 @@
-mom_cli.impl=net.echinopsii.ariane.community.scenarios.commons.momcli.rabbitmq.Client
-mom_cli.rabbitmq.product=Ariane tradeworkflow simulation - Front Office
-mom_cli.rabbitmq.information=FrontOfficeService-01
-mom_cli.rabbitmq.copyright=AGPLv3
-mom_cli.rabbitmq.version=0.2.0-SNAPSHOT
-mom_host.fqdn=localhost
-mom_host.port=5672
-ariane.pgurl=jmx://frontoffice-01.lab01.dev.dekatonshivr.echinopsii.net:9010
-ariane.osi=frontoffice-01.lab01.dev.dekatonshivr.echinopsii.net
-ariane.otm=FrontOffice OPS Team
-ariane.dtm=FrontOffice DEV Team
-front_office.feeder_base_topic=PRICE
-front_office.mo_queue=MOQ
-front_office.stocks_block_size=30
-front_office.stocks_sold_mindif=30
+mom_cli.impl=##mom_cli.impl
+mom_cli.rabbitmq.product=##mom_cli.rabbitmq.product
+mom_cli.rabbitmq.information=##mom_cli.rabbitmq.information
+mom_cli.rabbitmq.copyright=##mom_cli.rabbitmq.copyright
+mom_cli.rabbitmq.version=##mom_cli.rabbitmq.version
+mom_host.fqdn=##mom_host.fqdn
+mom_host.port=##mom_host.port
+ariane.pgurl=##ariane.pgurl
+ariane.osi=##ariane.osi
+ariane.otm=##ariane.otm
+ariane.app=##ariane.app
+ariane.cmp=##ariane.cmp
+ariane.type=##ariane.type
+front_office.feeder_base_topic=##front_office.feeder_base_topic
+front_office.mo_queue=##front_office.mo_queue
+front_office.stocks_block_size=##front_office.stocks_block_size
+front_office.stocks_sold_mindif=##front_office.stocks_sold_mindif
