--- a/distrib/conf/backoffice.properties
+++ b/distrib/conf/backoffice.properties
@@ -1,12 +1,14 @@
-mom_cli.impl=net.echinopsii.ariane.community.scenarios.commons.momcli.rabbitmq.Client
-mom_cli.rabbitmq.product=Ariane tradeworkflow simulation - Back Office
-mom_cli.rabbitmq.information=BackOfficeService-01
-mom_cli.rabbitmq.copyright=AGPLv3
-mom_cli.rabbitmq.version=0.2.0-SNAPSHOT
-mom_host.fqdn=localhost
-mom_host.port=5672
-ariane.pgurl=jmx://backofficesrv-01.lab01.dev.dekatonshivr.echinopsii.net:9010
-ariane.osi=backofficesrv-01.lab01.dev.dekatonshivr.echinopsii.net
-ariane.otm=BackOffice OPS Team
-ariane.dtm=BackOffice DEV Team
-back_office.queue=BOQ
+mom_cli.impl=##mom_cli.impl
+mom_cli.rabbitmq.product=##mom_cli.rabbitmq.product
+mom_cli.rabbitmq.information=##mom_cli.rabbitmq.information
+mom_cli.rabbitmq.copyright=##mom_cli.rabbitmq.copyright
+mom_cli.rabbitmq.version=##mom_cli.rabbitmq.version
+mom_host.fqdn=##mom_host.fqdn
+mom_host.port=##mom_host.port
+ariane.pgurl=##ariane.pgurl
+ariane.osi=##ariane.osi
+ariane.otm=##ariane.otm
+ariane.app=##ariane.app
+ariane.cmp=##ariane.cmp
+ariane.type=##ariane.type
+back_office.queue=##back_office.queue
