--- a/distrib/conf/middleoffice.properties
+++ b/distrib/conf/middleoffice.properties
@@ -1,14 +1,16 @@
-mom_cli.impl=net.echinopsii.ariane.community.scenarios.commons.momcli.rabbitmq.Client
-mom_cli.rabbitmq.product=Ariane tradeworkflow simulation - Middle Office
-mom_cli.rabbitmq.information=ariane_pgurl=jmx://middleofficeservice-01.lab01.dev.dekatonshivr.echinopsii.net:9010
-mom_cli.rabbitmq.copyright=AGPLv3
-mom_cli.rabbitmq.version=0.1.0-SNAPSHOT
-mom_host.fqdn=localhost
-mom_host.port=5672
-ariane.pgurl=jmx://middleofficesrv-01.lab01.dev.dekatonshivr.echinopsii.net:9010
-ariane.osi=middleofficesrv-01.lab01.dev.dekatonshivr.echinopsii.net
-ariane.otm=MiddleOffice OPS Team
-ariane.dtm=MiddleOffice DEV Team
-middle_office.queue=MOQ
-middle_office.risk_queue=RIQ
-middle_office.bo_queue=BOQ
+mom_cli.impl=##mom_cli.impl
+mom_cli.rabbitmq.product=##mom_cli.rabbitmq.product
+mom_cli.rabbitmq.information=##mom_cli.rabbitmq.information
+mom_cli.rabbitmq.copyright=##mom_cli.rabbitmq.copyright
+mom_cli.rabbitmq.version=##mom_cli.rabbitmq.version
+mom_host.fqdn=##mom_host.fqdn
+mom_host.port=##mom_host.port
+ariane.pgurl=##ariane.pgurl
+ariane.osi=##ariane.osi
+ariane.otm=##ariane.otm
+ariane.app=##ariane.app
+ariane.cmp=##ariane.cmp
+ariane.type=##ariane.type
+middle_office.queue=##middle_office.queue
+middle_office.risk_queue=##middle_office.risk_queue
+middle_office.bo_queue=##middle_office.bo_queue
