--- a/commons/momcli-patterns-api/pom.xml
+++ b/commons/momcli-patterns-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
          <groupId>net.echinopsii.ariane.community.scenarios</groupId>
 	     <artifactId>net.echinopsii.ariane.community.scenarios.commons</artifactId>
-         <version>0.2.1</version>
+         <version>0.3.0-SNAPSHOT</version>
          <relativePath>..</relativePath>
     </parent>
 
