--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <!-- General information -->
     <groupId>net.echinopsii.ariane.community</groupId>
     <artifactId>net.echinopsii.ariane.community.scenarios</artifactId>
-    <version>0.2.1</version>
+    <version>0.3.0-SNAPSHOT</version>
     <name>Ariane Community Scenarios Parent</name>
     <packaging>pom</packaging>
 	
