--- a/distrib/pom.xml
+++ b/distrib/pom.xml
@@ -8,4 +8,126 @@
     <version>0.3.0-SNAPSHOT</version>
     <name>Ariane Community Scenarios Distrib</name>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>install-jar</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>com.datastax.cassandra</groupId>
+                                    <artifactId>cassandra-driver-core</artifactId>
+                                    <version>2.1.5</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.typesafe.akka</groupId>
+                                    <artifactId>akka-actor_2.10</artifactId>
+                                    <version>2.3.4</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.rabbitmq</groupId>
+                                    <artifactId>amqp-client</artifactId>
+                                    <version>3.3.5</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.typesafe</groupId>
+                                    <artifactId>config</artifactId>
+                                    <version>1.2.1</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>commons-cli</groupId>
+                                    <artifactId>commons-cli</artifactId>
+                                    <version>1.1</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>commons-io</groupId>
+                                    <artifactId>commons-io</artifactId>
+                                    <version>1.2</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.scala-lang</groupId>
+                                    <artifactId>scala-library</artifactId>
+                                    <version>2.10.4</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.scala-lang</groupId>
+                                    <artifactId>scala-reflect</artifactId>
+                                    <version>2.10.4</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.echinopsii.ariane.community.scenarios.commons</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.scenarios.commons.momcli-patterns-api</artifactId>
+                                    <version>${project.version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.echinopsii.ariane.community.scenarios.commons</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.scenarios.commons.momcli-patterns-jms</artifactId>
+                                    <version>${project.version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.echinopsii.ariane.community.scenarios.commons</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.scenarios.commons.momcli-patterns-rabbitmq</artifactId>
+                                    <version>${project.version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.echinopsii.ariane.community.scenarios.commons</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.scenarios.commons.cassandra-connector</artifactId>
+                                    <version>${project.version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.echinopsii.ariane.community.scenarios.tradeworkflow</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.scenarios.tradeworflow.boapp</artifactId>
+                                    <version>${project.version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.echinopsii.ariane.community.scenarios.tradeworkflow</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.scenarios.tradeworflow.feederapp</artifactId>
+                                    <version>${project.version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.echinopsii.ariane.community.scenarios.tradeworkflow</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.scenarios.tradeworflow.frontapp</artifactId>
+                                    <version>${project.version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.echinopsii.ariane.community.scenarios.tradeworkflow</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.scenarios.tradeworflow.moapp</artifactId>
+                                    <version>${project.version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.echinopsii.ariane.community.scenarios.tradeworkflow</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.scenarios.tradeworflow.riskapp</artifactId>
+                                    <version>${project.version}</version>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${basedir}/lib</outputDirectory>
+                            <!--<stripVersion>true</stripVersion>-->
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptor>descriptor.xml</descriptor>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
