--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	
     <modules>
         <module>commons</module>
+        <module>distrib</module>
         <module>tradeworkflow</module>
     </modules>
 
