--- a/distrib/pom.xml
+++ b/distrib/pom.xml
@@ -62,19 +62,14 @@
                                     <version>2.10.4</version>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>net.echinopsii.ariane.community.scenarios.commons</groupId>
-                                    <artifactId>net.echinopsii.ariane.community.scenarios.commons.momcli-patterns-api</artifactId>
-                                    <version>${project.version}</version>
+                                    <groupId>net.echinopsii.ariane.community.messaging</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.messaging.api</artifactId>
+                                    <version>0.1.0-SNAPSHOT</version>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>net.echinopsii.ariane.community.scenarios.commons</groupId>
-                                    <artifactId>net.echinopsii.ariane.community.scenarios.commons.momcli-patterns-jms</artifactId>
-                                    <version>${project.version}</version>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>net.echinopsii.ariane.community.scenarios.commons</groupId>
-                                    <artifactId>net.echinopsii.ariane.community.scenarios.commons.momcli-patterns-rabbitmq</artifactId>
-                                    <version>${project.version}</version>
+                                    <groupId>net.echinopsii.ariane.community.messaging</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.messaging.rabbitmq</artifactId>
+                                    <version>0.1.0-SNAPSHOT</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>net.echinopsii.ariane.community.scenarios.commons</groupId>
