--- a/distrib/pom.xml
+++ b/distrib/pom.xml
@@ -62,13 +62,13 @@
                                     <version>2.10.4</version>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>net.echinopsii.ariane.community.messaging</groupId>
-                                    <artifactId>net.echinopsii.ariane.community.messaging.api</artifactId>
+                                    <groupId>net.echinopsii.ariane.community.core.messaging</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.core.messaging.api</artifactId>
                                     <version>0.1.0-SNAPSHOT</version>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>net.echinopsii.ariane.community.messaging</groupId>
-                                    <artifactId>net.echinopsii.ariane.community.messaging.rabbitmq</artifactId>
+                                    <groupId>net.echinopsii.ariane.community.core.messaging</groupId>
+                                    <artifactId>net.echinopsii.ariane.community.core.messaging.rabbitmq</artifactId>
                                     <version>0.1.0-SNAPSHOT</version>
                                 </artifactItem>
                                 <artifactItem>
