--- a/tradeworkflow/moapp/pom.xml
+++ b/tradeworkflow/moapp/pom.xml
@@ -17,8 +17,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.echinopsii.ariane.community.messaging</groupId>
-            <artifactId>net.echinopsii.ariane.community.messaging.api</artifactId>
+            <groupId>net.echinopsii.ariane.community.core.messaging</groupId>
+            <artifactId>net.echinopsii.ariane.community.core.messaging.api</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -34,8 +34,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>net.echinopsii.ariane.community.messaging</groupId>
-            <artifactId>net.echinopsii.ariane.community.messaging.rabbitmq</artifactId>
+            <groupId>net.echinopsii.ariane.community.core.messaging</groupId>
+            <artifactId>net.echinopsii.ariane.community.core.messaging.rabbitmq</artifactId>
             <version>0.1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
