--- a/tradeworkflow/feederapp/pom.xml
+++ b/tradeworkflow/feederapp/pom.xml
@@ -17,9 +17,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.echinopsii.ariane.community.core.messaging</groupId>
-            <artifactId>net.echinopsii.ariane.community.core.messaging.api</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <groupId>net.echinopsii.ariane.community.messaging</groupId>
+            <artifactId>net.echinopsii.ariane.community.messaging.api</artifactId>
+            <version>${version.ariane.messaging}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -34,9 +34,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>net.echinopsii.ariane.community.core.messaging</groupId>
-            <artifactId>net.echinopsii.ariane.community.core.messaging.rabbitmq</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <groupId>net.echinopsii.ariane.community.messaging</groupId>
+            <artifactId>net.echinopsii.ariane.community.messaging.rabbitmq</artifactId>
+            <version>${version.ariane.messaging}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
