--- a/distrib/samples/frontoffice.properties
+++ b/distrib/samples/frontoffice.properties
@@ -1,4 +1,4 @@
-mom_cli.impl=net.echinopsii.ariane.community.scenarios.commons.momcli.rabbitmq.Client
+mom_cli.impl=net.echinopsii.ariane.community.messaging.rabbitmq.Client
 mom_cli.rabbitmq.product=Ariane tradeworkflow simulation - Front Office
 mom_cli.rabbitmq.information=FrontOfficeService-01
 mom_cli.rabbitmq.copyright=AGPLv3
