--- a/distrib/samples/middleoffice.properties
+++ b/distrib/samples/middleoffice.properties
@@ -1,4 +1,4 @@
-mom_cli.impl=net.echinopsii.ariane.community.scenarios.commons.momcli.rabbitmq.Client
+mom_cli.impl=net.echinopsii.ariane.community.messaging.rabbitmq.Client
 mom_cli.rabbitmq.product=Ariane tradeworkflow simulation - Middle Office
 mom_cli.rabbitmq.information=MiddleOfficeService-01
 mom_cli.rabbitmq.copyright=AGPLv3
