up cassandra connector

--- a/commons/cassandra-connector/src/test/resources/cassandra1.properties
+++ b/commons/cassandra-connector/src/test/resources/cassandra1.properties
@@ -1,2 +1,2 @@
-cassandra.contact_points = tradeflow-mbrfsrv.lab01.dev
-cassandra.keyspace = BOHistory
+cassandra.contact_points = 172.20.0.2
+cassandra.keyspace = testNetworkTopologyStrategy
