--- a/commons/cassandra-connector/src/test/resources/cassandra2.properties
+++ b/commons/cassandra-connector/src/test/resources/cassandra2.properties
@@ -1,2 +1,4 @@
-cassandra.contact_points = tradeflow-mbrfsrv.lab01.dev
-cassandra.keyspace = test
+cassandra.contact_points = 172.20.0.3
+cassandra.keyspace = testSimpleStrategy
+cassandra.keyspace.replication_strategy = SimpleStrategy
+cassandra.keyspace.replication_factors = dc1:1
