--- a/commons/cassandra-connector/src/test/resources/cassandra3.properties
+++ b/commons/cassandra-connector/src/test/resources/cassandra3.properties
@@ -1,2 +1,4 @@
-cassandra.contact_points = tradeflow-mbrfsrv.lab01.dev
-cassandra.keyspace = test
+cassandra.contact_points = 172.20.0.4
+cassandra.keyspace = testNetworkTopologyStrategy
+cassandra.keyspace.replication_strategy = NetworkTopologyStrategy
+cassandra.keyspace.replication_factors = dc1:1,dc2:1,dc3:1
