--- a/distrib/conf/backoffice.properties
+++ b/distrib/conf/backoffice.properties
@@ -1,3 +1,5 @@
+cassandra.contact_points=##cassandra.contact_points
+cassandra.keyspace=##cassandra.keyspace
 mom_cli.impl=##mom_cli.impl
 mom_cli.rabbitmq.product=##mom_cli.rabbitmq.product
 mom_cli.rabbitmq.information=##mom_cli.rabbitmq.information
