add cassandra templates conf

--- a/distrib/samples/backoffice.properties
+++ b/distrib/samples/backoffice.properties
@@ -1,3 +1,6 @@
+cassandra.contact_points="cass-pool01.lab01.dev,cass-pool02.lab02.dev,cass-pool07.lab07.dev,cass-pool08.lab08.dev"
+cassandra.keyspace="tradeworkflow-demo"
+
 mom_cli.impl=net.echinopsii.ariane.community.messaging.rabbitmq.Client
 mom_cli.rabbitmq.product=Ariane tradeworkflow simulation - Back Office
 mom_cli.rabbitmq.information=BackOfficeService-01
@@ -5,6 +8,7 @@ mom_cli.rabbitmq.copyright=AGPLv3
 mom_cli.rabbitmq.version=0.3.0-SNAPSHOT
 mom_host.fqdn=localhost
 mom_host.port=5672
+
 ariane.pgurl=jmx://bo01.tradeflow-mbrfsrv.lab01.dev.dekatonshivr.echinopsii.net:9069
 ariane.osi=bo01.tradeflow-mbrfsrv
 ariane.otm=BOSops
