--- a/distrib/samples/risk.properties
+++ b/distrib/samples/risk.properties
@@ -1,3 +1,6 @@
+cassandra.contact_points="cass-pool01.lab01.dev,cass-pool02.lab02.dev,cass-pool07.lab07.dev,cass-pool08.lab08.dev"
+cassandra.keyspace="tradeworkflow-demo"
+
 mom_cli.impl=net.echinopsii.ariane.community.messaging.rabbitmq.Client
 mom_cli.rabbitmq.product=Ariane tradeworkflow simulation - Risk
 mom_cli.rabbitmq.information=RiskService-01
@@ -5,6 +8,7 @@ mom_cli.rabbitmq.copyright=AGPLv3
 mom_cli.rabbitmq.version=0.3.0-SNAPSHOT
 mom_host.fqdn=localhost
 mom_host.port=5672
+
 ariane.pgurl=jmx://risk01.tradeflow-mbrfsrv.lab01.dev.dekatonshivr.echinopsii.net:8069
 ariane.osi=risk01.tradeflow-mbrfsrv
 ariane.otm=RISops
